# canon-sdk

./: CMakeLists.txt  README.md  build.sh  s3-dev-sync.sh
app/: CMakeLists.txt
app/include/: CameraEvent.h  CameraModel.h  FileControl.h  PreSetting.h  Property.h  utility.h
app/src/: CameraEvent.cpp  CameraModel.cpp  FileControl.cpp  MultiCamCui.cpp  PreSetting.cpp  utility.cpp
